--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="sqljet" default="deploy">
 
-    <property name="build.vcs.number.1" value="local" />
+    <property name="build.number" value="local" />
 
 	<target name="clean">
 
@@ -43,7 +43,7 @@
     
     <target name="deploy" depends="clean, compile">
         <mkdir dir="build" />
-        <jar destfile="build/sqljet.${build.vcs.number.1}.jar">
+        <jar destfile="build/sqljet.${build.number}.jar">
             <fileset dir="sqljet/bin">
                 <include name="**/**"/>
             </fileset>
