--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,15 @@
 	<classpathentry kind="src" output="sqljet/bin" path="sqljet/src"/>
 	<classpathentry kind="src" output="sqljet-test/bin" path="sqljet-test/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="lib" path="sqljet-test/lib/junit-4.5.jar"/>
-	<classpathentry kind="lib" path="sqljet-test/lib/easymock.jar"/>
+	<classpathentry kind="lib" path="sqljet-test/lib/junit-4.5.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/home/sergey/work2/sqljet/junit/javadoc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="sqljet-test/lib/easymock.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/mnt/home/work/sqljet/easymock2.4/javadoc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="sqljet/bin"/>
 </classpath>
