Mock's tests for FileSystem.access()
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@15 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -61,6 +61,7 @@
 			<batchtest fork="yes" todir="sqljet-test/bin">
 			    <fileset dir="sqljet-test/src">
 			      <include name="**/*Test*.java"/>
+			      <exclude name="**/*Mock*.java"/>
 			    </fileset>
 			 </batchtest>
 		</junit>
