SqlJetFileSystemsManager first draft implementation
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@28 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -32,8 +32,8 @@
         <mkdir dir="sqljet/bin" />
         <mkdir dir="sqljet-test/bin" />
 
-        <javac destdir="sqljet/bin" srcdir="sqljet/src" />
-        <javac destdir="sqljet-test/bin" srcdir="sqljet-test/src">
+        <javac destdir="sqljet/bin" srcdir="sqljet/src" debug="true"/>
+        <javac destdir="sqljet-test/bin" srcdir="sqljet-test/src" debug="true">
             <classpath path="sqljet/bin" />
             <classpath>
             	<fileset dir="sqljet-test/lib" includes="*.jar"/>
