--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 			<attribute name="javadoc_location" value="file:/home/sergey/work2/sqljet/junit/javadoc/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="sqljet-test/lib/easymock.jar">
+	<classpathentry kind="lib" path="sqljet-test/lib/easymock.jar" sourcepath="/home/sergey/work2/sqljet/easymock/src.zip">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/mnt/home/work/sqljet/easymock2.4/javadoc/"/>
 		</attributes>
