--- a/build.xml
+++ b/build.xml
@@ -66,6 +66,7 @@
 			 </batchtest>
 			<sysproperty key="SQLJET_FILE_LOG" value="true"/>
 			<sysproperty key="SQLJET_FILE_PERFORMANCE_LOG" value="true"/>
+			<sysproperty key="SQLJET_PAGER_LOG" value="true"/>
 		</junit>
 	</target>
 	
