--- a/build.xml
+++ b/build.xml
@@ -64,6 +64,7 @@
 			      <exclude name="**/*Mock*.java"/>
 			    </fileset>
 			 </batchtest>
+			<sysproperty key="SQLJET_ASSERTIONS" value="true"/>
 			<sysproperty key="SQLJET_FILE_LOG" value="true"/>
 			<sysproperty key="SQLJET_FILE_PERFORMANCE_LOG" value="true"/>
 			<sysproperty key="SQLJET_PAGER_LOG" value="true"/>
