Cleaned up exceptions and assertions
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@81 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -52,6 +52,7 @@
 
 	<target name="test" depends="deploy">
 		<junit>
+			<jvmarg value="-ea"/>			
 			<formatter type="plain" usefile="false" />
 			<classpath path="sqljet/bin" />
             <classpath path="sqljet-test/bin" />
@@ -64,7 +65,6 @@
 			      <exclude name="**/*Mock*.java"/>
 			    </fileset>
 			 </batchtest>
-			<sysproperty key="SQLJET_ASSERTIONS" value="true"/>
 			<sysproperty key="SQLJET_FILE_LOG" value="true"/>
 			<sysproperty key="SQLJET_FILE_PERFORMANCE_LOG" value="true"/>
 			<sysproperty key="SQLJET_PAGER_LOG" value="true"/>
