Property SqlJetBtreeTableTest.deleteCopy
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@145 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -70,6 +70,7 @@
 			<sysproperty key="SQLJET_FILE_PERFORMANCE_LOG" value="false"/>
 			<sysproperty key="SQLJET_PAGER_LOG" value="false"/>
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false"/>
+			<sysproperty key="SqlJetBtreeTableTest.deleteCopy" value="true"/>
 		</junit>
 	</target>
 	
