SqlJetBtreeTable.delete() in progress.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@146 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -53,6 +53,7 @@
 	<target name="test" depends="deploy">
 		<junit>
 			<jvmarg value="-ea"/>			
+			<jvmarg value="-Xmx512m"/>			
 			<formatter type="plain" usefile="false" />
 			<classpath path="sqljet/bin" />
             <classpath path="sqljet-test/bin" />
