--- a/build.xml
+++ b/build.xml
@@ -71,7 +71,8 @@
 			<sysproperty key="SQLJET_FILE_PERFORMANCE_LOG" value="false"/>
 			<sysproperty key="SQLJET_PAGER_LOG" value="false"/>
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false"/>
-			<sysproperty key="SqlJetBtreeTableTest.deleteCopy" value="true"/>
+			<sysproperty key="SqlJetBtreeTableTest.DELETE_COPY" value="true"/>
+			<sysproperty key="SqlJetBtreeTableTest.REPEATS_COUNT" value="10000"/>
 		</junit>
 	</target>
 	
