lib/*.jar added to compile and test targets classpaths
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@167 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -32,11 +32,16 @@
         <mkdir dir="sqljet/bin" />
         <mkdir dir="sqljet-test/bin" />
 
-        <javac destdir="sqljet/bin" srcdir="sqljet/src" debug="true"/>
+        <javac destdir="sqljet/bin" srcdir="sqljet/src" debug="true">
+            <classpath>
+            	<fileset dir="lib" includes="*.jar"/>
+            </classpath>
+    	</javac>
         <javac destdir="sqljet-test/bin" srcdir="sqljet-test/src" debug="true">
             <classpath path="sqljet/bin" />
             <classpath>
             	<fileset dir="sqljet-test/lib" includes="*.jar"/>
+            	<fileset dir="lib" includes="*.jar"/>
             </classpath>
         </javac>
     </target>
@@ -59,6 +64,7 @@
             <classpath path="sqljet-test/bin" />
             <classpath>
             	<fileset dir="sqljet-test/lib" includes="*.jar"/>
+            	<fileset dir="lib" includes="*.jar"/>
             </classpath>
 			<batchtest fork="yes" todir="sqljet-test/bin">
 			    <fileset dir="sqljet-test/src">
