--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,6 @@
 			<attribute name="javadoc_location" value="file:/mnt/home/work/sqljet/easymock2.4/javadoc/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/antlr-3.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
 	<classpathentry kind="output" path="sqljet/bin"/>
 </classpath>
