--- a/build.xml
+++ b/build.xml
@@ -2,8 +2,13 @@
 
     <property name="build.number" value="local" />
 
-	<target name="clean">
+	<taskdef name="retroweaver" classname="net.sourceforge.retroweaver.ant.RetroWeaverTask">
+		<classpath>
+			<pathelement location="tools/retroweaver-all-2.0.7.jar"/>
+		</classpath>
+	</taskdef>
 
+	<target name="clean">
 		<!-- First, create directories, which will be removed, 
 			otherwise the removal may not be able to 
 			if directories don't exist yet -->
@@ -25,7 +30,6 @@
                 <include name="**/**" />
             </fileset>
         </delete>
-		
     </target>
 
     <target name="compile">
@@ -46,7 +50,11 @@
         </javac>
     </target>
     
-    <target name="deploy" depends="clean, compile">
+	<target name="weave" depends="compile">
+		<retroweaver srcdir="sqljet/bin"/>
+	</target>
+
+    <target name="deploy" depends="clean, compile, weave">
         <mkdir dir="build" />
         <jar destfile="build/sqljet.${build.number}.jar">
             <fileset dir="sqljet/bin">
