--- a/build.xml
+++ b/build.xml
@@ -51,10 +51,10 @@
     </target>
     
 	<target name="weave" depends="compile">
-			<retroweaver srcdir="sqljet/bin"/>
+			<retroweaver srcdir="sqljet/bin" target="1.4"/>
 	</target>
 
-	<target name="deploy" depends="clean, compile">
+	<target name="deploy" depends="clean, compile, weave">
         <mkdir dir="build" />
         <jar destfile="build/sqljet.${build.number}.jar">
             <fileset dir="sqljet/bin">
@@ -81,8 +81,6 @@
         <delete file="build/sqljet.${build.number}.src.zip"></delete>
         <delete file="build/sqljet.${build.number}.jar"></delete>
     </target>
-
-    <target name="deploy-1.4-compatible" depends="clean, compile, weave, deploy" />
 
 	<target name="test" depends="deploy">
 		<junit>
