--- a/build.xml
+++ b/build.xml
@@ -61,10 +61,10 @@
     </target>
     
 	<target name="weave" depends="compile">
-			<retroweaver srcdir="sqljet/bin" target="1.4"/>
+		<retroweaver srcdir="sqljet/bin" target="1.4"/>
 	</target>
 
-	<target name="deploy" depends="clean, compile, weave">
+	<target name="deploy" depends="clean, compile">
         <mkdir dir="build" />
         <jar destfile="build/sqljet.${build.number}.jar">
             <fileset dir="sqljet/bin">
@@ -91,6 +91,8 @@
         <delete file="build/sqljet.${build.number}.src.zip"></delete>
         <delete file="build/sqljet.${build.number}.jar"></delete>
     </target>
+
+	<target name="deploy-weaved" depends="clean, compile, weave, deploy" />
 
 	<target name="test" depends="deploy">
 		<junit>
