COPYING file should be included into the distribution
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@316 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -66,6 +66,9 @@
                 <exclude name="**/.*"/>
                 <exclude name=".*"/>
             </zipfileset>
+            <zipfileset dir=""> 
+                <include name="COPYING"/>
+            </zipfileset>
         </zip>
 
         <zip destfile="build/sqljet.${build.number}.zip">
@@ -75,6 +78,9 @@
             </zipfileset>
             <zipfileset dir="lib" prefix="sqljet.${build.number}">
                 <include name="**/**"/>
+            </zipfileset>
+            <zipfileset dir="" prefix="sqljet.${build.number}">
+                <include name="COPYING"/>
             </zipfileset>
         </zip>
         
