README.txt should be included into the distribution file.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@318 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -68,6 +68,7 @@
             </zipfileset>
             <zipfileset dir=""> 
                 <include name="COPYING"/>
+                <include name="README.txt"/>
             </zipfileset>
         </zip>
 
@@ -81,6 +82,7 @@
             </zipfileset>
             <zipfileset dir="" prefix="sqljet.${build.number}">
                 <include name="COPYING"/>
+                <include name="README.txt"/>
             </zipfileset>
         </zip>
         
