antlr target moved out of compile one; custom eclipse project builder added that executes antlr target on "clean".
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@319 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -25,21 +25,24 @@
             </fileset>
         </delete>
     </target>
+    
+    <target name="antlr">
+        <java classname="org.antlr.Tool" fork="true" failonerror="true">
+            <arg value="-report"/>
+            <arg value="-fo"/>
+            <arg value="sqljet/src/org/tmatesoft/sqljet/core/internal/lang"/>
+            <arg value="sqljet/src/Sql.g"/>
+            <classpath>
+                <pathelement location="tools/antlr-3.1.3.jar"/>
+                <pathelement path="${java.class.path}"/>
+            </classpath>
+        </java>
+    </target>
 
-    <target name="compile">
+    <target name="compile" depends="antlr">
         <mkdir dir="sqljet/bin" />
         <mkdir dir="sqljet-test/bin" />
 
-    	<java classname="org.antlr.Tool" fork="true" failonerror="true">
-    	    <arg value="-report"/>
-    	    <arg value="-fo"/>
-    	    <arg value="sqljet/src/org/tmatesoft/sqljet/core/internal/lang"/>
-        	<arg value="sqljet/src/Sql.g"/>
-    	    <classpath>
-    	        <pathelement location="tools/antlr-3.1.3.jar"/>
-    	        <pathelement path="${java.class.path}"/>
-    	    </classpath>
-    	</java>
     	<javac destdir="sqljet/bin" srcdir="sqljet/src" debug="true">
             <classpath>
             	<fileset dir="lib" includes="*.jar"/>
