antlr generation adds @suppressWarnings tag to the generated classes to get rid of some warnings in Eclipse project
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@375 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,16 @@
                 <pathelement path="${java.class.path}"/>
             </classpath>
         </java>
+    	<!-- add @supressWarning to generated classes -->
+    	<replace file="sqljet/src/org/tmatesoft/sqljet/core/internal/lang/SqlLexer.java" token="public class SqlLexer">
+    		<replacevalue>@SuppressWarnings({"unused"})
+public class SqlLexer</replacevalue>
+    	</replace>
+    	<replace file="sqljet/src/org/tmatesoft/sqljet/core/internal/lang/SqlParser.java" token="public class SqlParser">
+    		<replacevalue>@SuppressWarnings({"unused", "unchecked"})
+public class SqlParser</replacevalue>
+    	</replace>
+    		
     </target>
 
     <target name="compile" depends="antlr">
