--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="sqljet/bin" path="sqljet/src"/>
+	<classpathentry kind="src" path="sqljet-examples/expenses/src"/>
 	<classpathentry kind="src" output="sqljet-test/bin" path="sqljet-test/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="sqljet-test/lib/junit-4.5.jar">
