--- a/sqljet-examples/expenses/.classpath
+++ b/sqljet-examples/expenses/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/sqljet.local.jar"/>
+	<classpathentry kind="lib" path="/org.tmatesoft.sqljet/lib/antlr-runtime-3.1.3.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.tmatesoft.sqljet"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
