JVM detection (build.xml)
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@489 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -105,6 +105,7 @@ public class SqlParser</replacevalue>
 
 	<target name="test" depends="deploy">
 		<echoproperties prefix="os."/>		
+		<echoproperties prefix="java.vm."/>		
 		<junit>
 			<jvmarg value="-ea"/>			
 			<jvmarg value="-Xmx128m"/>			
