silent clean (build.xml)
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@490 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -10,13 +10,13 @@
 		<mkdir dir="sqljet/bin"/>
 		<mkdir dir="sqljet-test/bin"/>
 		
-        <delete verbose="true" includeemptydirs="true" failonerror="true">
+        <delete verbose="false" includeemptydirs="true" failonerror="true">
             <fileset dir="build">
                 <include name="**/**" />
             </fileset>
         </delete>
 
-        <delete verbose="true" includeemptydirs="true" failonerror="false">
+        <delete verbose="false" includeemptydirs="true" failonerror="false">
             <fileset dir="sqljet/bin">
                 <include name="**/**" />
             </fileset>
