--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
 	<classpathentry kind="lib" path="sqljet-examples/browser/lib/org-netbeans-swing-outline.jar"/>
+	<classpathentry kind="lib" path="sqljet-test/lib/sqlitejdbc-v056-pure.jar"/>
 	<classpathentry kind="output" path="sqljet/bin"/>
 </classpath>
