55: Add performance tests http://code.google.com/p/sqljet/issues/detail?id=55
improved benchmarks time measurement: changed order of tests run

git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@565 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -277,7 +277,7 @@ public class SqlParser</replacevalue>
 	<target name="benchmarks" depends="deploy">
 		<junit>
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false"/>
-			<sysproperty key="SqlJetBenchmark.TimeLog" value="false"/>
+			<sysproperty key="SqlJetBenchmark.TimeLog" value="true"/>
 			<jvmarg value="-Xmx128m"/>			
 			<classpath path="sqljet/bin" />
             <classpath path="sqljet-test/bin" />
@@ -289,8 +289,10 @@ public class SqlParser</replacevalue>
 			<batchtest fork="yes" todir="${benchmarks}">
 				<formatter type="xml" />
 			    <fileset dir="sqljet-test/src">
-			      <include name="**/*Benchmark*.java"/>
-			      <exclude name="**/*Abstract*.java"/>
+			      <include name="**/SqlJetBenchmark.java"/>
+			    </fileset>
+			    <fileset dir="sqljet-test/src">
+				  <include name="**/NestedVmBenchmark.java"/>
 			    </fileset>
 			 </batchtest>
 		</junit>
