103: Optimize performance http://code.google.com/p/sqljet/issues/detail?id=103
fixed page cache overflow

git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@567 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -277,7 +277,7 @@ public class SqlParser</replacevalue>
 	<target name="benchmarks" depends="deploy">
 		<junit>
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false"/>
-			<sysproperty key="SqlJetBenchmark.TimeLog" value="true"/>
+			<sysproperty key="SqlJetBenchmark.TimeLog" value="false"/>
 			<jvmarg value="-Xmx128m"/>			
 			<classpath path="sqljet/bin" />
             <classpath path="sqljet-test/bin" />
