103: Optimize performance http://code.google.com/p/sqljet/issues/detail?id=103
fixed memory leak in page cache code

git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@568 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -278,6 +278,7 @@ public class SqlParser</replacevalue>
 		<junit>
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false"/>
 			<sysproperty key="SqlJetBenchmark.TimeLog" value="false"/>
+			<sysproperty key="SqlJetBenchmark.ScaleFactor" value="10"/>
 			<jvmarg value="-Xmx128m"/>			
 			<classpath path="sqljet/bin" />
             <classpath path="sqljet-test/bin" />
