Simple usage example for SQLJet web site added.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@578 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="sqljet/bin" path="sqljet/src"/>
+	<classpathentry kind="src" output="sqljet-examples/simple/bin" path="sqljet-examples/simple/src"/>
 	<classpathentry kind="src" output="sqljet-examples/browser/bin" path="sqljet-examples/browser/src"/>
 	<classpathentry kind="src" output="sqljet-examples/inventory/bin" path="sqljet-examples/inventory/src"/>
 	<classpathentry kind="src" output="sqljet-examples/expenses/bin" path="sqljet-examples/expenses/src"/>
