--- a/build.xml
+++ b/build.xml
@@ -82,11 +82,13 @@ public class SqlParser</replacevalue>
 		<mkdir dir="sqljet-test/bin" />
 
 		<javac destdir="sqljet/bin" srcdir="sqljet/src" debug="true">
+			<compilerarg value="-O"/>
 			<classpath>
 				<fileset dir="lib" includes="*.jar" />
 			</classpath>
 		</javac>
 		<javac destdir="sqljet-test/bin" srcdir="sqljet-test/src" debug="true">
+			<compilerarg value="-O"/>
 			<classpath path="sqljet/bin" />
 			<classpath>
 				<fileset dir="sqljet-test/lib" includes="*.jar" />
@@ -101,6 +103,7 @@ public class SqlParser</replacevalue>
 		<mkdir dir="sqljet-examples/inventory/bin" />
 
 		<javac destdir="sqljet-examples/browser/bin" srcdir="sqljet-examples/browser/src" debug="true">
+			<compilerarg value="-O"/>
 			<classpath>
 				<fileset dir="lib" includes="*.jar" />
 				<fileset dir="sqljet-examples/browser/lib" includes="*.jar" />
@@ -108,12 +111,14 @@ public class SqlParser</replacevalue>
 			<classpath path="sqljet/bin" />
 		</javac>
 		<javac destdir="sqljet-examples/expenses/bin" srcdir="sqljet-examples/expenses/src" debug="true">
+			<compilerarg value="-O"/>
 			<classpath path="sqljet/bin" />
 			<classpath>
 				<fileset dir="lib" includes="*.jar" />
 			</classpath>
 		</javac>
 		<javac destdir="sqljet-examples/inventory/bin" srcdir="sqljet-examples/inventory/src" debug="true">
+			<compilerarg value="-O"/>
 			<classpath path="sqljet/bin" />
 			<classpath>
 				<fileset dir="lib" includes="*.jar" />
@@ -284,6 +289,8 @@ public class SqlParser</replacevalue>
 	<target name="benchmarks" depends="deploy">
 		<junit>
 			<jvmarg value="-server" />
+			<jvmarg value="-da" />
+			<jvmarg value="-dsa" />			
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
 			<sysproperty key="SqlJetBenchmark.TimeLog" value="false" />
 			<sysproperty key="SqlJetBenchmark.ScaleFactor" value="10" />
@@ -334,6 +341,8 @@ public class SqlParser</replacevalue>
 	<target name="sandbox-server-benchmarks" depends="deploy">
 		<junit>
 			<jvmarg value="-server" />
+			<jvmarg value="-da" />
+			<jvmarg value="-dsa" />
 			<formatter type="plain" usefile="false" />
 			<classpath path="sqljet/bin" />
 			<classpath path="sqljet-test/bin" />
@@ -343,7 +352,7 @@ public class SqlParser</replacevalue>
 			</classpath>
 			<batchtest fork="yes" todir="sqljet-test/bin">
 				<fileset dir="sqljet-test/src">
-					<include name="**/*sandbox*/**/*Benchmarks*.java" />
+					<include name="**/*sandbox*/**/MemoryBuffersBenchmarks.java" />
 				</fileset>
 			</batchtest>
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
@@ -352,6 +361,8 @@ public class SqlParser</replacevalue>
 
 	<target name="sandbox-client-benchmarks" depends="deploy">
 		<junit>
+			<jvmarg value="-da" />
+			<jvmarg value="-dsa" />
 			<formatter type="plain" usefile="false" />
 			<classpath path="sqljet/bin" />
 			<classpath path="sqljet-test/bin" />
@@ -361,13 +372,17 @@ public class SqlParser</replacevalue>
 			</classpath>
 			<batchtest fork="yes" todir="sqljet-test/bin">
 				<fileset dir="sqljet-test/src">
-					<include name="**/*sandbox*/**/*Benchmarks*.java" />
+					<include name="**/*sandbox*/**/MemoryBuffersBenchmarks.java" />
 				</fileset>
 			</batchtest>
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
 		</junit>
 	</target>
 
-	<target name="sandbox-benchmarks" depends="deploy,sandbox-server-benchmarks,sandbox-client-benchmarks" />
+	<target name="sandbox-benchmarks" depends="deploy,sandbox-server-benchmarks,sandbox-client-benchmarks">
+		<echoproperties prefix="os." />
+		<echoproperties prefix="java.vm." />		
+	</target>
+
 
 </project>
